# ToTra

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  publish-python-sdk.yml  publish-typescript-sdk.yml
admin/: Dockerfile  README.md  go.mod  go.sum  main.go
admin/api/: agent.go  agent_test.go  ai_insights.go  ai_insights_test.go  alert_config.go  audit.go  audit_test.go  auth.go  baa.go  bot.go  bot_test.go  budget_planner.go  budget_planner_test.go  compliance.go  compliance_advanced.go  compliance_advanced_test.go  compliance_bundles.go  compliance_checklist.go  compliance_checklist_test.go  compliance_reports.go  compliance_reports_test.go  cost_advanced.go  cost_advanced_test.go  cost_analysis.go  cost_optimization.go  cost_optimization_test.go  cost_reports.go  cost_reports_test.go  cost_savings.go  cost_savings_test.go  cost_settings.go  cost_settings_test.go  data_retention.go  data_retention_test.go  employee_self_service.go  errors.go  fuel.go  gdpr.go  gdpr_test.go  hr_sync.go  (+33 more)
admin/config/: config.go
admin/cron/: snapshot.go
admin/crypto/: crypto.go
admin/db/: db.go
admin/services/: aiq.go  (+91 more)
dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
docs/: feishu-webhook-setup.md  litellm-gap-analysis.md  migration-from-openai.md  moat-analysis.md
gateway/: Dockerfile  README.md  go.mod  go.sum  main.go
infra/: README.md
parser/: Dockerfile  README.md  conftest.py  main.py  requirements-dev.txt  requirements.txt
scripts/: healthcheck.sh  smoke-test-feishu.sh
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_client.py
sdk/python/totra/: __init__.py  client.py  types.py
(+426 files in other folders)
