[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "totra-sdk"
version = "0.1.0"
description = "Python SDK for ToTra — AI Spend Management & LLM Gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://github.com/yourorg/totra"

[tool.pytest.ini_options]
asyncio_mode = "auto"
