[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "totra-sdk"
version = "0.1.0"
description = "Python SDK for ToTra — AI Spend Management & LLM Gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["ai", "llm", "openai", "gateway", "totra", "llm-gateway"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://github.com/yourorg/totra"
"Bug Tracker" = "https://github.com/yourorg/totra/issues"
Documentation = "https://github.com/yourorg/totra/blob/main/docs/migration-from-openai.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
